--- a/hrms/src/main/resources/application.properties
+++ b/hrms/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/hrmss
 spring.datasource.username=postgres
 spring.datasource.password=Emir123321Q..E
 spring.jpa.properties.javax.persistence.validation.mode = none
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
